# SattLint

./: .gitignore  LICENSE  README.md
src/: app.py  cli.py  config.toml  pyproject.toml
src/analyzers/: modules.py  variables.py
src/docgenerator/: docgen.py
src/models/: ast_model.py  project_graph.py
src/transformer/: sl_transformer.py
